<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/quest"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="40sp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:textSize="40sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/wAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="350sp"
        android:text="@string/Manchu"
        android:textSize="18sp" />

    <Button
        android:id="@+id/rAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="290sp"
        android:text="@string/Mongols"
        android:textSize="18sp" />

    <Button
        android:id="@+id/wAns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230sp"
        android:text="@string/Xiongnu"
        android:textSize="18sp" />

    <Button
        android:id="@+id/wAns3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170sp"
        android:text="@string/Jin"
        android:textSize="18sp" />

    <!--
    <Button
        android:id="@+id/Viewer"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50sp"
        android:text="@string/Toggle1" />
        -->



    <ImageView
        android:id="@+id/addcard"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="9dp"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/hiddenEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25sp"
        app:srcCompat="@mipmap/eyeout_round" />

    <ImageView
        android:id="@+id/shownEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8sp"
        app:srcCompat="@mipmap/eyeappear" />

</RelativeLayout>